Updated HTML and CSS files after verifying code

--- a/Javascript_Basics_CSS/js_basics.css
+++ b/Javascript_Basics_CSS/js_basics.css
@@ -50,6 +50,10 @@ a{
       color: rgb(130,201,219);
       text-decoration: underline;
 }
-li{
+#main_content li{
+      color:white;
+      margin: 0 0 15px 0;
+}
+#nav li{
       color:white;
 }
